--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,18 @@
+.header {
+	display: flex;
+	flex-shrink: 0;
+}
+
 h1 {
-	font-size: 5em;
+	font-size: 3em;
+}
+
+ul {
+	display: flex;
 }
 
 ul>li {
-	display: inline-block;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin: 10px;
+  list-style: none;
+
 }
