--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
-li {
-  list-style: none;
 }
