Start with create-react-app

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,17 +1,26 @@
-.header {
+.header, .header-logged-out {
 	display: flex;
+	flex-wrap: wrap;
+	background: #eee;
+	height: 80px;
+}
+
+.header-logged-out {
+	align-content: space-between;
+	height: 80px;
 }
 
 h1 {
 	font-size: 3em;
+	margin: 10px;
 }
 
 ul {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 ul>li {
-	margin: 10px;
+	margin: 24px;
   list-style: none;
-
 }
