--- a/src/components/stock-container/StockContainer.css
+++ b/src/components/stock-container/StockContainer.css
@@ -1,4 +1,15 @@
+.stock-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .quantity {
 	width: 100px;
+	margin: auto;
+}
+
+.chart {
 	margin: auto;
 }
